# librw

./: .appveyor.yml  .gitignore  .travis.yml  ARCHITECTURE.MD  CMakeCPack.cmake  CMakeLists.txt  Dockerfile  Make.common  Makefile  Makefile.mingw  Makefile.ps2  README.cmake  README.md  TODO  args.h  clump.cpp  conanfile.py  dffwrite.cpp  dumprwtree.cpp  geometry.cpp  insttest.cpp  librw-config.cmake.in  librw.sln  librw.vcxproj  main.cpp  ogl.cpp  plugins.cpp  premake5.lua  ps2.cpp  rw.h  rwbase.cpp  rwbase.h  rwogl.h  rwplugin.h  rwps2.h
.github/workflows/: build-cmake-conan.yml  build-mingw.yml  build-ps2.yml  build-switch.yml  build.yml
cmake/: FindSDL2.cmake  Findglfw3.cmake  UseStaticRuntime.cmake  ee.cmake  librw-config.cmake.in  toolchain_ps2_ee.cmake
cmake/nx/: FindNXGL.cmake  NXFunctions.cmake
cmake/ps2/: PS2Functions.cmake
cmake/ps2/cmaketoolchain/: conanfile.py  toolchain_ps2_ee.cmake
cmake/win/: WinFunctions.cmake
skeleton/: CMakeLists.txt  glfw.cpp  sdl2.cpp  sdl3.cpp  skeleton.cpp  skeleton.h  win.cpp
skeleton/imgui/: CMakeLists.txt  ImGuizmo.h  imgui_impl_rw.cpp  imgui_impl_rw.h
src/: CMakeLists.txt  anim.cpp  base.cpp  base.err  bmp.cpp  camera.cpp  charset.cpp  clump.cpp  d3d.cpp  d3d8.cpp  d3d8render.cpp  d3d9.cpp  d3d9render.cpp  d3ddriver.cpp  engine.cpp  error.cpp  frame.cpp  geometry.cpp  geometryplg.cpp  geoplg.cpp  gtaplg.cpp  gtaplg.h  hanim.cpp  image.cpp  light.cpp  matfx.cpp  mdl.cpp  mdl.h  ogl.cpp  pds.cpp  pipeline.cpp  plg.cpp  plugins.cpp  png.cpp  prim.cpp  ps2.cpp  ps2raster.cpp  raster.cpp  render.cpp  rwanim.h  (+29 more)
src/d3d/: d3d.cpp  d3d8.cpp  d3d8matfx.cpp  d3d8plugins.cpp  d3d8render.cpp  d3d8skin.cpp  d3d9.cpp  d3d9matfx.cpp  d3d9plugins.cpp  d3d9render.cpp  d3d9skin.cpp  d3ddevice.cpp  d3ddevice.cpp~RF424a7a9.TMP  d3ddriver.cpp  d3dim2d.cpp  d3dimmed.cpp  d3drender.cpp  rwd3d.h  rwd3d8.h  rwd3d9.h  rwd3dimpl.h  rwxbox.h  rwxboximpl.h  xbox.cpp  xboxmatfx.cpp  xboxplugins.cpp  xboxskin.cpp  xboxvfmt.cpp
src/d3d/shaders/: default_PS.h  default_VS.hlsl  default_all_VS.h  default_amb_VS.h  default_amb_dir_VS.h  default_color_PS.h  default_color_PS.hlsl  default_color_tex_PS.h  default_color_tex_PS.hlsl  default_tex_PS.h  im2d_PS.h  im2d_PS.hlsl  im2d_tex_PS.h  im3d_VS.hlsl  lighting.h  make.cmd  make_default.cmd  make_matfx.cmd  make_skin.cmd  matfx_env_PS.h  matfx_env_PS.hlsl  matfx_env_VS.hlsl  matfx_env_all_VS.h  matfx_env_amb_VS.h  matfx_env_amb_dir_VS.h  matfx_env_tex_PS.h  skin_VS.hlsl  skin_all_VS.h  skin_amb_VS.h  skin_amb_dir_VS.h  standardConstants.h
src/gl/: gl3.cpp  gl3device.cpp  gl3driver.cpp  gl3im2d.cpp  gl3immed.cpp  gl3matfx.cpp  gl3pipe.cpp  gl3plugins.cpp  gl3raster.cpp  gl3render.cpp  gl3shader.cpp  gl3skin.cpp  rwgl3.h  rwgl3impl.h  rwgl3plg.h  rwgl3shader.h  rwwdgl.h  wdgl.cpp
src/gl/gl2_shaders/: Makefile  default.vert  default_vs_gl2.inc  header.frag  header.vert  header_fs.inc  header_vs.inc  im2d.vert  im2d_gl2.inc  im3d.vert  im3d_gl2.inc  matfx_env.frag  matfx_env.vert  matfx_gl2.inc  simple.frag  simple_fs_gl2.inc  skin.vert  skin_gl2.inc
src/gl/glad/: glad.c  glad.h
src/gl/shaders/: Makefile  default.vert  default_vs_gl3.inc  header.frag  header.vert  header_fs.inc  header_vs.inc  im2d.frag  im2d.vert  im2d_gl3.inc  im3d.vert  im3d_gl.inc  im3d_gl3.inc  matfx_env.frag  matfx_env.vert  matfx_gl.inc  matfx_gl3.inc  simple.frag  simple.vert  simple_fs_gl3.inc  simple_gl3.inc  simple_vs_gl3.inc  skin.vert  skin_gl3.inc
src/ps2/: pds.cpp  ps2.cpp  ps2device.cpp  ps2matfx.cpp  ps2raster.cpp  ps2skin.cpp  rwps2.h  rwps2impl.h  rwps2plg.h
src/vulkan/: rwvulkan.h  vulkan.cpp  vulkandevice.cpp  vulkanraster.cpp  vulkanshaders.inc
src/vulkan/generated_shaders/: color3d.frag  color3d.frag.spv  color3d.vert  color3d.vert.spv  color3d_ray.frag  color3d_ray.frag.spv  im2d.frag  im2d.frag.spv  im2d.vert  im2d.vert.spv
tests/gl/: Makefile  Makefile.mingw  gl.h  glshader.cpp  main.cpp  rwtest.h
tests/gl/math/: conversion.h  mat4.h
tests/ps2/: Makefile  README.md  defaultpipe.dsm  dma.cpp  dma.h  ee_regs.h  gs.cpp  gs.h  light.vu  main.cpp  math.cpp  mesh.h  mips_regs.h  ps2.h  skinpipe.dsm  vu.dsm
tools/: CMakeLists.txt  dffwrite.cpp  dumprwtree.cpp  insttest.cpp
tools/camera/: CMakeLists.txt  camexamp.cpp  camexamp.h  main.cpp  viewer.cpp  viewer.h
tools/camera/files/: clump.dff
tools/clumpview/: camera.cpp  font.cpp  main.cpp  ras_test.cpp  tests.cpp  tl_tests.cpp
tools/d3d9/: camera.cpp  camera.h  d3d9.vcxproj  d3dInit.cpp  d3dUtility.cpp  d3dUtility.h  math.cpp
tools/d3d9/math/: dquat.h  mat3.h
tools/dffwrite/: dffwrite.cpp  dffwrite.vcxproj
tools/dumprwtree/: CMakeLists.txt  Makefile  dumprwtree.cpp  dumprwtree.vcxproj
tools/gl/: Makefile  Makefile.mingw  camera.cpp  glshader.cpp  main.cpp  math.cpp
tools/gl/math/: math.h  quat.h  vec3.h  vec4.h
tools/hopalong/: main.cpp  particle.inc  vfs.cpp  vfs.h
tools/im2d/: CMakeLists.txt  im2d.cpp  im2d.h  linelist.cpp  main.cpp  polyline.cpp  trifan.cpp  trilist.cpp  tristrip.cpp
tools/im3d/: CMakeLists.txt  im3d.cpp  im3d.h  linelist.cpp  main.cpp  polyline.cpp  trifan.cpp  trilist.cpp  tristrip.cpp
tools/imguitest/: CMakeLists.txt  main.cpp
tools/insttest/: Makefile  insttest.cpp  insttest.vcxproj
tools/lights/: CMakeLists.txt  lights.cpp  lights.h  main.cpp  main.h
tools/playground/: CMakeLists.txt  font.cpp  main.cpp  ras_test.cpp  splines.cpp  tl_tests.cpp
tools/ps2/: README.md  defaultpipe.dsm  gif.h  gs.h  main.cpp  math.cpp  math.h  mesh.cpp  skinpipe.dsm  vu.dsm
tools/ps2test/: CMakeLists.txt  main.cpp  ps2.h
tools/ps2test/vu/: defaultpipe.dsm  light.vu  setup_persp.vu  skinpipe.dsm  vu.dsm
tools/rsltest/: Makefile  rsl.cpp  rsl.h  rsltest.cpp  rsltest.vcxproj
tools/ska2anm/: CMakeLists.txt  ska2anm.cpp
tools/subrast/: CMakeLists.txt  main.cpp  subrast.cpp  subrast.h
tools/subrast/files/: clump.dff
tools/txdwrite/: txdwrite.cpp
various/dffwrite/: dffwrite_2013.vcxproj
