if(LIBRW_TOOLS AND NOT LIBRW_PLATFORM_PS2)
    add_subdirectory(dumprwtree)
    add_subdirectory(ska2anm)
endif()

if(LIBRW_EXAMPLES)
    if(TARGET librw::skeleton)
        add_subdirectory(imguitest)
        add_subdirectory(playground)
        add_subdirectory(lights)
        add_subdirectory(subrast)
        add_subdirectory(camera)
        add_subdirectory(im2d)
        add_subdirectory(im3d)
    endif()

    if(LIBRW_PLATFORM_PS2)
        add_subdirectory(ps2test)
    endif()
endif()
